<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity"
    android:background="@drawable/background">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonFav0"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/favori_blanc"/>

        <Button
            android:id="@+id/buttonFav1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/favori_noir"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textNomMarche"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:layout_marginBottom="15dp"
        tools:text="Nom du marché"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Localisation :"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textLocalisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        tools:text="zrokazr razirazrh arazriaherairh azrahzrhazrh azrea hzruiazhr oauizrhazra arazrr"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="Arrondissement :"/>

        <TextView
            android:id="@+id/textArdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            android:textColor="@color/black"
            tools:text="4e"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="Type de marché :"/>

        <TextView
            android:id="@+id/textCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            tools:text="Alimentaire" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Horaires d'ouvertures :"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:text="@string/lundi"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textHorairesLundi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            tools:text="Fermé"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:text="@string/mardi"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textHorairesMardi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            tools:text="10h00 - 20h00"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:text="@string/mercredi"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textHorairesMercredi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            tools:text="Fermé"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:text="@string/jeudi"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textHorairesJeudi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            tools:text="Fermé"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:text="@string/vendredi"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textHorairesVendredi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            tools:text="7h00 - 14h00"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:text="@string/samedi"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textHorairesSamedi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            tools:text="8h00 - 17h00"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="18dp"
            android:text="@string/dimanche"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textHorairesDimanche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            tools:text="8h00 - 17h00"
            android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>